spring_hibernate_jpa2_apiRest/src/main/java/com/example/demo/error/PedidoNotFoundException.java
package com.example.demo.error;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(HttpStatus.NOT_FOUND)
public class PedidoNotFoundException extends RuntimeException{

	
	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

	public PedidoNotFoundException(long id) {
		super("No se puede encontrar el pedido con la ID: " + id);
	}
}
